<resources>
    <string name="app_name">Messenger</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="auth">Login</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="join_to_group_chat">Join To Group Chat</string>
    <string name="leave_group_chat">Leave Group Chat</string>
    <string name="clear_saved_nicks">Delete All Contacts</string>
    <string name="restore_all_contacts">Restore Contacts Name</string>
    <string name="clear_all_chats">Clear All Chats</string>
    <string name="clear">Clear This Chat</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="log_token">Log Token</string>
</resources>
