<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.anatomica.messenger.MainActivity">
    <item
        android:id="@+id/btn_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/btn_create_group"
        android:orderInCategory="101"
        android:title="@string/create_group_chat" />
    <item
        android:id="@+id/btn_delete_group"
        android:orderInCategory="102"
        android:title="@string/delete_group_chat" />
    <item
        android:id="@+id/btn_clear_nick"
        android:orderInCategory="103"
        android:title="@string/clear_saved_nick" />
    <item
        android:id="@+id/btn_clear_all"
        android:orderInCategory="104"
        android:title="@string/clear_all_chats" />
    <item
        android:id="@+id/btn_clear"
        android:orderInCategory="105"
        android:title="@string/clear" />
    <item
        android:id="@+id/btn_logout"
        android:orderInCategory="106"
        android:title="@string/logout" />
    <item
        android:id="@+id/btn_exit"
        android:orderInCategory="107"
        android:title="@string/exit" />
</menu>
